[package]
name = "leaflet-rs-example-yew-component"
version = "0.1.0"
authors = ["The leaflet-rs Developers"]
license = "MIT/Apache-2.0"
description = "An example using leaflet-rs in yew.rs component"
homepage = "https://github.com/slowtec/leaflet-rs"
repository = "https://github.com/slowtec/leaflet-rs"
edition = "2021"
publish = false

[dependencies]
yew = "0.18"
leaflet = "0.1.2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_json = "1.0.79"
serde = "1.0.136"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlAnchorElement", "console", "Window", "Document"]
